--- a/structure.html
+++ b/structure.html
@@ -1,3 +1,4 @@
+<!-- CLASS COPY -->
 <!doctype html>
 <html>
 	<head>
@@ -10,7 +11,7 @@
 		<header id="masthead"> <!-- Start Header area -->
 			<nav>
 				<div class="container">
-					<h1 id="brand"></h1>
+					<h1 id="brand">IMA Zebra</h1>
 					<ul> <!-- Main navigation -->
 						<li>
 							<a href="">About Me</a>
