Complete class 2, hero and columns.

--- a/structure.html
+++ b/structure.html
@@ -13,36 +13,42 @@
 				<div class="container">
 					<h1 id="brand">IMA Zebra</h1>
 					<ul> <!-- Main navigation -->
-						<li>
-							<a href="">About Me</a>
-						</li>
-						<li>
-							<a href="">Work</a>
-						</li>
-						<li>
-							<a href="">Contact Me</a>
-						</li>
+						<li><a href="">About Me</a></li>
+						<li><a href="">Work</a></li>
+						<li><a href="">Contact Me</a></li>
 					</ul>
 				</div>
 			</nav>
 		</header>
 
-
-		<section id=""> <!-- Full bleed hero image -->
-			<img src="" alt="" />
+		<section id="hero"> <!-- Full bleed hero image -->
+		  <img src="images/zebra.jpg" alt="IMA Zebra">
+		  <h2>IMA Zebra</h2>
+		  <span class="city">Africa</span>
 		</section>
 
 		<section id="main-content"> <!-- Main body content -->
+			<h3>I'm a zebra.</h3>
 			<div class="container">
-				<section class="column"> <!-- First column -->
+				<section class="column" id="home"> <!-- First column -->
+					<img src="images/africa.png" alt="Africa">
+					<h4>My Home</h4>
+					<p>Wild zebras live in Africa. Cras mattis consectetur purus sit amet fermentum.Vestibulum id ligula porta felis euismod semper. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean lacinia bibendum nulla sed consectetur.</p>
+					<a href="" class="btn">See my home</a>
 				</section>
-				<section class="column"><!-- Second column -->
+				<section class="column" id="diet"><!-- Second column -->
+					<img src="images/grass.jpg" alt="Grass">
+					<h4>My Diet</h4>
+					<p>Zebras eat grass primarily. Cras mattis consectetur purus sit amet fermentum. Vestibulum id ligula porta felis euismod semper. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean lacinia bibendum nulla sed consectetur.</p>
+					<a href="" class="btn">Grass is great</a>
 				</section>
-				<section class="column"> <!-- Third column -->
+				<section class="column" id="pattern"><!-- Third column -->
+					<img src="images/stripes.jpg" alt="Zebra Stripes">
+					<h4>Zebra Stripes</h4>
+					<p>Each Zebra has a unique stripe pattern. Cras mattis consectetur purus sit amet fermentum. Vestibulum id ligula porta felis euismod semper. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean lacinia bibendum nulla sed consectetur.</p>
+					<a href="" class="btn">Check out my stripes</a>
 				</section>
 			</div>
-		</section>
-
 		<section id="social-links"> <!-- Full width section, above footer -->
 		</section>
 
